--- a/components/_forms.scss
+++ b/components/_forms.scss
@@ -1,6 +1,17 @@
 /* Inputs
 -------------------------------------------------- */
 .woocommerce {
+  // Add custom controls to all checkboxes and radio inputs
+  input[type="checkbox"],
+  input[type="radio"] {
+    @extend .custom-control-input;
+
+    + label {
+      @extend .custom-control-label;
+    }
+  }
+
+  // Style labels
   .form-row > label:not(.woocommerce-form__label-for-checkbox) {
     color: $text-muted;
     font-size: $font-size-sm;
@@ -8,6 +19,7 @@
     margin-bottom: 0;
   }
 
+  // Style all inputs
   select,
   .qty,
   .input-text {
@@ -18,6 +30,7 @@
     width: 4.5em;
   }
 
+  // Style some checkboxes
   .woocommerce-form__label {
     @extend .custom-control;
     @extend .custom-checkbox;
@@ -31,16 +44,12 @@
 
       &::before,
       &::after {
-        top: 1px;
+        top: 2px;
       }
-    }
-
-    input[type="checkbox"] {
-      @extend .custom-control-input;
     }
   }
 
-  /* Validation
+  /* Form validation
   -------------------------------------------------- */
   form {
     .required {
@@ -66,6 +75,24 @@
     input {
       border-bottom-color: $success;
     }
+  }
+}
+
+/* Shipping methods form
+-------------------------------------------------- */
+ul#shipping_method li {
+  @extend .custom-control;
+  @extend .custom-radio;
+
+  label {
+    &::before,
+    &::after {
+      top: 2px;
+    }
+  }
+
+  input[type="hidden"] + label {
+    margin-left: -1.5rem;
   }
 }
 
