Add header-cart Update cart layout

--- a/_woocommerce.scss
+++ b/_woocommerce.scss
@@ -8,6 +8,7 @@
 @import "components/widgets";
 @import "components/product-grid";
 @import "components/star-ratings";
+@import "components/header-cart";
 @import "templates/archive-product";
 @import "templates/single-product";
 @import "templates/single-product-gallery";
