--- a/templates/_cart.scss
+++ b/templates/_cart.scss
@@ -5,25 +5,22 @@ body.woocommerce-cart {
     margin-bottom: 1rem;
 
     @extend .table-responsive;
-
-    @include media-breakpoint-up(md) {
-      width: 60%;
-      display: inline-block;
-    }
   }
 
-  .cart-collaterals {
-    margin-bottom: 3rem;
-
-    @include media-breakpoint-up(md) {
-      float: right;
-      width: 36%;
-      display: inline-block;
+  @include media-breakpoint-up(md) {
+    .cart-collaterals {
+      @include make-row();
     }
-  }
 
-  .cross-sells {
-    clear: both;
+    .cross-sells {
+      @include make-col-ready();
+      @include make-col(8);
+    }
+
+    .cart_totals {
+      @include make-col-ready();
+      @include make-col(4);
+    }
   }
 }
 
@@ -93,12 +90,6 @@ body.woocommerce-cart {
   .button.checkout-button {
     @extend .btn-lg;
     @extend .btn-block;
-  }
-
-  ul.woocommerce-shipping-methods {
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
   }
 }
 
