--- a/components/_notices.scss
+++ b/components/_notices.scss
@@ -20,7 +20,7 @@
   }
 
   &::before {
-    font-family: "WooCommerce", sans-serif;
+    font-family: WooCommerce, sans-serif;
     display: inline-block;
     position: absolute;
     top: 0.75rem;
