--- a/components/_star-ratings.scss
+++ b/components/_star-ratings.scss
@@ -7,7 +7,7 @@
   height: 1em;
   line-height: 1;
   width: 5.4em;
-  font-family: "star", sans-serif;
+  font-family: star, sans-serif;
   margin: 0.25em 4px 0.25em 0;
 
   .woocommerce-product-rating & {
@@ -63,7 +63,7 @@ p.stars {
       width: 1em;
       height: 1em;
       line-height: 1;
-      font-family: "WooCommerce", sans-serif;
+      font-family: WooCommerce, sans-serif;
       content: "\e021";
       text-indent: 0;
     }
