--- a/templates/_single-product-reviews.scss
+++ b/templates/_single-product-reviews.scss
@@ -57,7 +57,7 @@
       text-indent: -9999px;
 
       &::before {
-        font-family: "WooCommerce", sans-serif;
+        font-family: WooCommerce, sans-serif;
         font-size: 0.85rem;
         color: $primary;
         position: absolute;
