--- a/components/_header-cart.scss
+++ b/components/_header-cart.scss
@@ -6,7 +6,7 @@
   padding: 0;
 
   .svg-icon {
-    fill: currentColor;
+    fill: currentcolor;
   }
 
   .count {
@@ -22,7 +22,7 @@
       top: 100%;
       z-index: 999999;
       right: -999em;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 1px 3px #0003;
       width: 18em;
       background-color: white;
       padding: 0.75em;
