--- a/components/_product-grid.scss
+++ b/components/_product-grid.scss
@@ -1,45 +1,31 @@
 /* Product grid
 -------------------------------------------------- */
-$shop-gutter-width-sm: 5px;
-$shop-gutter-width:    15px;
-
 ul.products {
-  @include make-row();
+  @include make-row;
 
-  margin-right: -$shop-gutter-width-sm;
-  margin-left: -$shop-gutter-width-sm;
   list-style: none;
   padding-left: 0;
   margin-bottom: 0;
   clear: both;
 
-  @include media-breakpoint-up(sm) {
-    margin-right: -$shop-gutter-width;
-    margin-left: -$shop-gutter-width;
-  }
-
   li {
-    @include make-col-ready();
+    @include make-col-ready;
     @include make-col(6);
 
-    padding-right: $shop-gutter-width-sm;
-    padding-left: $shop-gutter-width-sm;
+    position: relative;
     margin-bottom: 40px;
-    text-align: center;
     display: flex;
+    text-align: center;
     flex-flow: column nowrap;
     justify-content: space-between;
-
-    @include media-breakpoint-up(sm) {
-      padding-right: $shop-gutter-width;
-      padding-left: $shop-gutter-width;
-    }
+    align-items: center;
   }
 
   a.woocommerce-LoopProduct-link {
     text-decoration: none;
     flex: 1 1 auto;
     height: 100%;
+    width: 100%;
   }
 
   img {
@@ -72,6 +58,8 @@ ul.products {
   /* Button
   -------------------------------------------------- */
   .button {
+    @extend .btn;
+    @extend .btn-primary;
     @extend .btn-sm;
 
     transition: opacity 0.2s;
@@ -80,7 +68,7 @@ ul.products {
       opacity: 0.3;
 
       &::after {
-        font-family: "WooCommerce", sans-serif;
+        font-family: WooCommerce, sans-serif;
         content: "\e01c";
         vertical-align: bottom;
         margin-left: 0.53em;
@@ -89,7 +77,7 @@ ul.products {
     }
 
     &.added::after {
-      font-family: "WooCommerce", sans-serif;
+      font-family: WooCommerce, sans-serif;
       content: "\e017";
       margin-left: 0.53em;
       vertical-align: bottom;
@@ -105,10 +93,13 @@ ul.products {
   /* Added to cart badge
   -------------------------------------------------- */
   .added_to_cart {
-    @extend .badge;
-    @extend .badge-info;
+    @extend .btn;
+    @extend .btn-info;
+    @extend .btn-sm;
     @extend .shadow-sm;
 
+    padding-top: 0;
+    padding-bottom: 0;
     animation: moveup 0.2s ease-in-out forwards;
     transform: translateX(-50%);
     position: absolute;
@@ -116,8 +107,13 @@ ul.products {
     bottom: 0;
 
     @keyframes moveup {
-      from { bottom: -20px; }
-      to { bottom: -15px; }
+      from {
+        bottom: -20px;
+      }
+
+      to {
+        bottom: -15px;
+      }
     }
   }
 
