--- a/templates/_account.scss
+++ b/templates/_account.scss
@@ -39,11 +39,11 @@
   /* Dashboard
   -------------------------------------------------- */
   &.logged-in .woocommerce {
-    @include make-row();
+    @include make-row;
 
     .woocommerce-MyAccount-navigation,
     .woocommerce-MyAccount-content {
-      @include make-col-ready();
+      @include make-col-ready;
       @include make-col(12);
     }
 
