--- a/templates/_cart.scss
+++ b/templates/_cart.scss
@@ -9,16 +9,16 @@ body.woocommerce-cart {
 
   @include media-breakpoint-up(md) {
     .cart-collaterals {
-      @include make-row();
+      @include make-row;
     }
 
     .cross-sells {
-      @include make-col-ready();
+      @include make-col-ready;
       @include make-col(8);
     }
 
     .cart_totals {
-      @include make-col-ready();
+      @include make-col-ready;
       @include make-col(4);
 
       margin-left: auto;
@@ -56,7 +56,7 @@ body.woocommerce-cart {
       float: left;
 
       > label {
-        @extend .sr-only;
+        @extend .visually-hidden;
       }
 
       input.input-text {
@@ -91,7 +91,6 @@ body.woocommerce-cart {
 
   .button.checkout-button {
     @extend .btn-lg;
-    @extend .btn-block;
   }
 }
 
