--- a/templates/_single-product.scss
+++ b/templates/_single-product.scss
@@ -1,16 +1,15 @@
 /* Single Product
 -------------------------------------------------------------- */
 body.single-product {
-  .site-main > .product {
-    @include make-row();
-
-    position: relative;
+  main > .product {
+    @include make-row;
   }
 
   .woocommerce-product-gallery {
     margin-bottom: 2rem;
+    position: relative;
 
-    @include make-col-ready();
+    @include make-col-ready;
 
     @include media-breakpoint-up(md) {
       @include make-col(6);
@@ -20,7 +19,7 @@ body.single-product {
   .summary.entry-summary {
     margin-bottom: 2rem;
 
-    @include make-col-ready();
+    @include make-col-ready;
 
     @include media-breakpoint-up(md) {
       @include make-col(6);
@@ -32,12 +31,12 @@ body.single-product {
   .upsells.products {
     margin-bottom: 2rem;
 
-    @include make-col-ready();
+    @include make-col-ready;
   }
 
   .onsale {
     right: auto;
-    left: $grid-gutter-width / 2 - 5px;
+    left: $grid-gutter-width / 2;
     z-index: 1;
   }
 
