--- a/components/_widgets.scss
+++ b/components/_widgets.scss
@@ -108,6 +108,8 @@
     line-height: 2.4em;
 
     .button {
+      @extend .btn;
+      @extend .btn-primary;
       @extend .btn-sm;
 
       float: left;
