--- a/templates/_archive-product.scss
+++ b/templates/_archive-product.scss
@@ -13,6 +13,7 @@
   margin-bottom: 1.5rem;
 
   select {
-    @extend .form-control-sm;
+    @extend .form-select;
+    @extend .form-select-sm;
   }
 }
