--- a/components/_header-cart.scss
+++ b/components/_header-cart.scss
@@ -13,28 +13,30 @@
 
   a.cart-contents {
     position: relative;
-    width: 40px;
-    height: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
     .svg-icon {
-      color: $body-color;
+      color: var(--bs-nav-link-color);
     }
   
     .count {
       display: inline-block;
+      margin: 0 0.25rem;
       background-color: $danger;
       border-radius: 50rem;
       position: absolute;
       top: 0.325rem;
-      right: 0.25rem;
-      font-size: 0.563rem;
-      color: white;
-      padding: 2px 3px;
-      line-height: 1;
+      right: 0.125rem;
+      font-size: 10px;
+      color: $white;
+      height: 13px;
+      text-align: center;
+      padding: 0 3px;
+      line-height: 14px;
+      min-width: 14px;
     }
   }
 
