--- a/components/_notices.scss
+++ b/components/_notices.scss
@@ -4,8 +4,10 @@
 .woocommerce-info,
 .woocommerce-error {
   @extend .alert;
-  @extend .clearfix;
+  @extend .alert-primary;
 
+  font-size: $font-size-sm;
+  line-height: $line-height-sm;
   list-style: none;
   padding-left: 3.5rem;
 
@@ -30,7 +32,7 @@
 
 /* Message */
 .woocommerce-message {
-  @extend .alert-primary;
+  // @extend .bg-primary;
 
   a.button {
     @extend .btn-primary;
@@ -43,7 +45,7 @@
 
 /* Error */
 .woocommerce-error {
-  @extend .alert-warning;
+  @extend .bg-warning;
 
   .button {
     @extend .btn-warning;
@@ -56,7 +58,7 @@
 
 /* Info */
 .woocommerce-info {
-  @extend .alert-info;
+  margin-bottom: $paragraph-margin-bottom;
 
   .button {
     @extend .btn-info;
