--- a/templates/_archive-product.scss
+++ b/templates/_archive-product.scss
@@ -1,5 +1,11 @@
 /* Product Archive
 -------------------------------------------------- */
+.woocommerce-products-header {
+  text-align: center;
+  max-width: 730px;
+  margin: 0 auto 1.5rem;
+}
+
 .woocommerce-result-count {
   float: left;
   line-height: $input-height-sm;
