--- a/templates/_single-product.scss
+++ b/templates/_single-product.scss
@@ -37,8 +37,9 @@ body.single-product {
   }
 
   .onsale {
-    right: auto;
-    left: 1.5rem;
+    position: absolute;
+    top: 1rem;
+    left: calc(($grid-gutter-width / 2) + 1rem);
     z-index: 1;
   }
 
